# notebook-terminal

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  PUBLISHING.md  README.md  pyproject.toml
notebook_terminal/: __init__.py  notebook.py  remote.py
notebook_terminal/static/: all.css  dataframe.js  widget.js
src/notebook_terminal/: __init__.py  notebook.py  rich_runner.py  session.py  styling.py  web.py
src/notebook_terminal/static/: dataframe.css  widget.js
tests/: test_cwd.py  test_interpreter.py  test_remote.py  test_run_python_file_args.py  test_transport.py
