[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "notebook-terminal"
version = "0.1.1"
description = "A cross-platform embeddable PTY/ConPTY terminal for Jupyter and Python web applications"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "Robert Zawadzki" }
]
keywords = [
  "terminal", "jupyter", "jupyterlab", "pty", "conpty", "xterm",
  "flask", "django", "notebook", "ipywidgets"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: Jupyter",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: System :: Shells",
  "Topic :: Software Development :: User Interfaces"
]
dependencies = [
  "anywidget>=0.9.13",
  "ipywidgets>=8.1",
  "ipython>=8",
  "traitlets>=5",
  "jupyterlab_widgets>=3.0",
  "widgetsnbextension>=4.0",
  "pywinpty>=3.0.0; platform_system == 'Windows'"
]

[project.optional-dependencies]
flask = ["Flask>=2.3", "flask-sock>=0.7"]
django = ["Django>=4.2", "channels>=4"]
plotly = ["plotly>=5"]
data = ["pandas>=1.5", "matplotlib>=3.6"]
dev = ["build>=1.2", "twine>=5", "pytest>=8"]

[project.urls]
Homepage = "https://github.com/ZawadzkiR/notebook-terminal"
Repository = "https://github.com/ZawadzkiR/notebook-terminal"
Issues = "https://github.com/ZawadzkiR/notebook-terminal/issues"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
notebook_terminal = ["static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
